--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="navbar-inner">
         <div class="container">
           <div class="logo">
-            <a class="brand" href="index.html"><img src="img/logo.png" alt=""></a>
+            <a class="brand" href="index.html"><img src="img/logo.png" style="width: 200px !important; height: 45px !important;" alt=""></a>
           </div>
           <div class="navigation">
             <nav>
@@ -531,7 +531,7 @@
             <div class="aligncenter">
               <div class="logo">
                 <a class="brand" href="index.html">
-								<img src="img/logo.png" alt="">
+								<img src="img/logo.png" style="width: 240px !important; height: 70px !important;" alt="">
 							</a>
               </div>
               <p>Best Quality printing service</p>
