--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </div>
                   <h4 class="subtitle">Quality printing all the time </h4>
                   <div class="bottomup">
-                    <img src="img/slider/parallax/img-1.png" alt="">
+                    <img src="img/pr1.jpg" alt="">
                   </div>
                 </li>
                 <li class="animate-in">
@@ -89,7 +89,7 @@
                   </div>
                   <h4 class="subtitle">Excellent finishing as user-desired</h4>
                   <div class="lefttop">
-                    <img src="img/slider/parallax/img-2.png" alt="">
+                    <img src="img/pr4.jpg" alt="">
                   </div>
                 </li>
                 <li class="animate-in">
@@ -98,7 +98,7 @@
                   </div>
                   <h4 class="subtitle">Time, We never miss it</h4>
                   <div class="righttop">
-                    <img src="img/slider/parallax/img-3.png" alt="">
+                    <img src="img/pr2.jpg" width="600px" height="450px" alt="">
                   </div>
                 </li>
               </ul>
@@ -141,13 +141,13 @@
           <div class="flexslider">
             <ul class="slides">
               <li>
-                <img src="img/slider/flexslider/img-1.png" alt="">
+                <img src="img/pr5.jpg" alt="">
               </li>
               <li>
-                <img src="img/slider/flexslider/img-2.png" alt="">
+                <img src="img/pr3.jpg" alt="">
               </li>
               <li>
-                <img src="img/slider/flexslider/img-3.png" alt="">
+                <img src="img/pr4.jpg" alt="">
               </li>
             </ul>
           </div>
@@ -511,7 +511,7 @@
             <span><i class="icon-comment"></i> <strong>Message:</strong> +91 9865251801</span>
           </p>
           <p>
-            <span><i class="icon-envelope-alt"></i> <strong>Email:</strong> tmasivaprinters@gmail.com</span>
+            <span><i class="icon-envelope-alt"></i> <strong>Email:</strong> <a href='mailto:tmasivaprinters@gmail.com'>tmasivaprinters@gmail.com</a></span>
           </p>
           
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d976.7518878119143!2d77.97209982916823!3d11.693876999481454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTHCsDQxJzM4LjAiTiA3N8KwNTgnMjEuNSJF!5e0!3m2!1sen!2sin!4v1529821795784" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
